# template-go-cpp

./: .gitignore  Makefile  README.md  go.mod
cmd/cli/: Makefile  main.go
cpp/: Makefile
cpp/include/: .gitignore
cpp/src/toy-app/: CMakeLists.txt
cpp/src/toy-app/src/: CMakeLists.txt  main.cpp
cpp/src/toy-lib/: CMakeLists.txt  Makefile
cpp/src/toy-lib/src/: CMakeLists.txt  Wrapper.cpp  lib_c_wrapper.h
pkg/example/: printer.go  printer_test.go
scripts/: run.sh  setup.sh  test.sh
